Add BioBERT NLI+STS CORD-19 v1 to DVC training pipeline

--- a/data_and_models/pipelines/sentence_embedding/dvc.yaml
+++ b/data_and_models/pipelines/sentence_embedding/dvc.yaml
@@ -1,10 +1,17 @@
 stages:
+  train_biobert_nli_sts_cord19_v1:
+    cmd: bash scripts/build.sh
+    deps:
+      - scripts/sentences-filtered_11-527-877.txt
+      - scripts/biosses_sentences.txt
+    outs:
+      - ../../models/sentence_embedding/biobert_nli_sts_cord19_v1
   eval_biobert_nli_sts_cord19_v1:
     cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
       --model=biobert_nli_sts_cord19_v1 --output_dir=../../metrics/sentence_embedding
     deps:
+      - ../../models/sentence_embedding/biobert_nli_sts_cord19_v1
       - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
-      - Dockerfile
       - eval.py
     params:
       - eval.biobert_nli_sts_cord19_v1
