--- a/data_and_models/pipelines/sentence_embedding/dvc.yaml
+++ b/data_and_models/pipelines/sentence_embedding/dvc.yaml
@@ -2,24 +2,25 @@ stages:
   train_biobert_nli_sts_cord19_v1:
     cmd: bash scripts/build.sh
     deps:
-      - scripts/sentences-filtered_11-527-877.txt
-      - scripts/biosses_sentences.txt
+    - scripts/biosses_sentences.txt
+    - scripts/sentences-filtered_11-527-877.txt
     outs:
-      - ../../models/sentence_embedding/biobert_nli_sts_cord19_v1
+    - ../../models/sentence_embedding/biobert_nli_sts_cord19_v1
+    frozen: true
   eval_biobert_nli_sts_cord19_v1:
     cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
       --model=biobert_nli_sts_cord19_v1 --output_dir=../../metrics/sentence_embedding
     deps:
-      - ../../models/sentence_embedding/biobert_nli_sts_cord19_v1
-      - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
-      - eval.py
+    - ../../models/sentence_embedding/biobert_nli_sts_cord19_v1
+    - ../../annotations/sentence_embedding/sentence_similarity_cord19.csv
+    - eval.py
     params:
-      - eval.biobert_nli_sts_cord19_v1
+    - eval.biobert_nli_sts_cord19_v1
     outs:
-      - ../../metrics/sentence_embedding/eval_biobert_nli_sts_cord19_v1.csv
-      - ../../metrics/sentence_embedding/eval_biobert_nli_sts_cord19_v1.png
+    - ../../metrics/sentence_embedding/eval_biobert_nli_sts_cord19_v1.csv
+    - ../../metrics/sentence_embedding/eval_biobert_nli_sts_cord19_v1.png
     metrics:
-      - ../../metrics/sentence_embedding/eval_biobert_nli_sts_cord19_v1.json
+    - ../../metrics/sentence_embedding/eval_biobert_nli_sts_cord19_v1.json
   eval_biobert_nli_sts:
     cmd: python eval.py --annotation_files=../../annotations/sentence_embedding/sentence_similarity_cord19.csv
       --model=biobert_nli_sts --output_dir=../../metrics/sentence_embedding
