--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,13 @@ BBS_HTTPS_PROXY=
 BBS_http_proxy=
 BBS_https_proxy=
 
+# The users to be pre-defined on the bbs_base docker image using the `useradd`
+# command. This also creates the corresponding home-directories on the image
+# and adjust some minor settings. See `docker/base.Dockerfile` and
+# `docker/utils.sh` for more details.
+# In the end the goal is to run the `bbs_base` container with the `--user`
+# flag like this:
+# $ docker run -it --user user1 bbs_base
 BBS_USERS=user1/id1,user2/id2
 #------------------------------------------------------------------------------
 # Container - search server
