[BBS-284] Remove dependencies that are not available on PyPI (#235)
Co-authored-by: Francesco Casalegno <francesco.casalegno@gmail.com>
Co-authored-by: Jan <jankrepl@yahoo.com>

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,8 @@ envlist =
 
 [testenv]
 download = true
-deps = -rrequirements.txt
+deps =
+    en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 extras = dev
 allowlist_externals = docker
 commands =
