--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,7 @@ scipy==1.5.2
 scispacy==0.2.5
 sent2vec-prebuilt>=0.0.2
 sentence-transformers==0.3.9
+setuptools==53.0.0
 spacy==2.3.1
 sphinx-bluebrain-theme==0.2.3
 sseclient==0.0.27
