--- a/.env.example
+++ b/.env.example
@@ -49,7 +49,7 @@ BBS_SEARCH_LOG_FILE=bbs_search.log
 
 BBS_SEARCH_MODELS_PATH=./trained_models
 BBS_SEARCH_EMBEDDINGS_PATH=assets/embeddings.h5
-BBS_SEARCH_MODELS=BSV,SBioBERT
+BBS_SEARCH_MODELS=SBioBERT
 
 BBS_SEARCH_DB_URL=<host>:<port>/<database>
 BBS_SEARCH_MYSQL_USER=guest
@@ -60,9 +60,6 @@ BBS_SEARCH_MYSQL_PASSWORD=guest
 #------------------------------------------------------------------------------
 BBS_EMBEDDING_LOG_LEVEL=20
 BBS_EMBEDDING_LOG_FILE=bbs_embedding.log
-
-BBS_EMBEDDING_BSV_CHECKPOINT_PATH=assets/BioSentVec_PubMed_MIMICIII-bigram_d700.bin
-BBS_EMBEDDING_SENT2VEC_CHECKPOINT_PATH=assets/new_s2v_model.bin
 
 #------------------------------------------------------------------------------
 # Container - mining server
