--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ envlist =
 [testenv]
 download = true
 deps =
-    en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+    en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
 extras = dev
 allowlist_externals = docker
 commands =
