--- a/requirements.txt
+++ b/requirements.txt
@@ -15,45 +15,37 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
 
-Cython==0.29.21
 Flask==1.1.2
-PyLD==2.0.3
 PyYAML==5.3.1
 SQLAlchemy==1.3.19
 Sphinx==3.2.1
-cryptography==3.1.1
 docker==4.3.1
 dvc[ssh]==1.10.2
 flake8==3.8.3
-frozendict==1.2
 gunicorn==20.0.4
 h5py==2.10.0
-hjson==3.0.2
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_core_sci_lg-0.2.5.tar.gz
-https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_bionlp13cg_md-0.2.5.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_bc5cdr_md-0.2.5.tar.gz
+https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_bionlp13cg_md-0.2.5.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_craft_md-0.2.5.tar.gz
 https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.5/en_ner_jnlpba_md-0.2.5.tar.gz
 ipython>=7.16.1
 ipywidgets==7.5.1
-jupyterlab==2.2.8
 langdetect==1.0.8
 matplotlib==3.3.2
 mypy==0.790
 mysqlclient==2.0.1
-networkx==2.4
 nltk==3.5
 numpy==1.20.1
 pandas==1.1.2
 pdfkit==0.6.1
-pillow==7.2.0
-pycodestyle==2.6.0
+pydocstyle==5.1.1
 pymysql==0.10.1
+pytest-benchmark==3.2.3
 pytest-cov==2.10.1
 pytest==6.1.0
 python-dotenv==0.14.0
-rdflib-jsonld==0.5.0
 requests==2.24.0
 responses==0.12.0
 scikit-learn==0.23.2
@@ -63,9 +55,7 @@ sent2vec-prebuilt>=0.0.2
 sentence-transformers==0.3.5
 spacy==2.3.1
 sphinx-bluebrain-theme==0.2.3
-sseclient==0.0.27
 torch==1.6.0
 tox==3.20.0
 tqdm==4.57.0
 transformers==3.0.2
-pyarrow==1.0.1
