--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -45,16 +45,16 @@ jobs:
           pip install tox
 
       - name: linting and code style
-        if: ${{ matrix.python-version }} == '3.7'
+        if: matrix.python-version == '3.7'
         run: tox -vv -e lint
 
       - name: tests and coverage
         run: tox -vv -e ${{ matrix.tox-env }}
 
       - name: docs
-        if: ${{ matrix.python-version }} == '3.7'
+        if: matrix.python-version == '3.7'
         run: tox -vv -e docs
 
       - name: check packaging
-        if: ${{ matrix.python-version }} == '3.7'
+        if: matrix.python-version == '3.7'
         run: tox -vv -e check-packaging
