--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -39,6 +39,8 @@ jobs:
         run: |
           python setup.py bdist_wheel
           ls -altr dist/
+          python setup.py --version
+          git tag
 
       - name: publish package to pypi
         uses: pypa/gh-action-pypi-publish@master
