--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -3,15 +3,17 @@ name: pypi publishing
 
 on:
   push:
-    branches: master
-  pull_request:
+    branches:
+      - master
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 
 jobs:
 
   publish_on_pypi:
 
-#    if: startsWith(github.ref, 'refs/tags')
+    if: startsWith(github.ref, 'refs/tags')
 
     runs-on: ubuntu-latest
 
@@ -20,7 +22,7 @@ jobs:
       - name: checkout latest commit
         uses: actions/checkout@v2
 
-      - name: Get history and tags for SCM versioning to work
+      - name: get history and tags for SCM versioning to work
         run: |
           git fetch --prune --unshallow
           git fetch --depth=1 origin +refs/tags/*:refs/tags/*
@@ -45,9 +47,6 @@ jobs:
       - name: create wheel distribution
         run: |
           python setup.py bdist_wheel
-          ls -altr dist/
-          python setup.py --version
-          git tag
 
       - name: publish package to pypi
         uses: pypa/gh-action-pypi-publish@master
