--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,7 +31,7 @@ jobs:
 
     steps:
 
-      - name: cancel previous workflow that are still running
+      - name: cancel previous workflows that are still running
         uses: styfle/cancel-workflow-action@0.8.0
         with:
           access_token: ${{ github.token }}
