--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -3,17 +3,15 @@ name: pypi publishing
 
 on:
   push:
-    branches:
-      - master
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+    branches: master
+  pull_request:
 
 
 jobs:
 
   publish_on_pypi:
 
-    if: startsWith(github.ref, 'refs/tags')
+#    if: startsWith(github.ref, 'refs/tags')
 
     runs-on: ubuntu-latest
 
@@ -48,8 +46,8 @@ jobs:
         run: |
           python setup.py bdist_wheel
 
-      - name: publish package to pypi
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_PASSWORD }}
+#      - name: publish package to pypi
+#        uses: pypa/gh-action-pypi-publish@master
+#        with:
+#          user: __token__
+#          password: ${{ secrets.PYPI_PASSWORD }}
