--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - master
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+#      tags:
+#        - 'v[0-9]+.[0-9]+.[0-9]+'
 
 
 jobs:
