--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -4,7 +4,7 @@ name: pypi publishing
 on:
   push:
     branches:
-      - master
+      - test_pypi_trigger
 #      tags:
 #        - 'v[0-9]+.[0-9]+.[0-9]+'
 
