--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
 
-# Integer values of Python loggin levels are as follows (default is WARNING):
+# Integer values of Python logging levels are as follows (default is WARNING):
 # CRITICAL = 50
 # ERROR = 40
 # WARNING = 30
