--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -5,15 +5,13 @@ on:
   push:
     branches:
       - test_pypi_trigger
-#      tags:
-#        - 'v[0-9]+.[0-9]+.[0-9]+'
 
 
 jobs:
 
   publish_on_pypi:
 
-    if: startsWith(github.ref, 'refs/tags')
+    if: startsWith(github.ref, 'refs/tags') and endsWith(github.ref, 'v0101')
 
     runs-on: ubuntu-latest
 
