--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -11,7 +11,7 @@ jobs:
 
   publish_on_pypi:
 
-    if: startsWith(github.ref, 'refs/tags') and endsWith(github.ref, 'v0101')
+    if: startsWith(github.ref, 'refs/tags') && endsWith(github.ref, 'v0101')
 
     runs-on: ubuntu-latest
 
