--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -11,7 +11,7 @@ jobs:
 
   publish_on_pypi:
 
-    if: startsWith(github.ref, 'refs/tags') && endsWith(github.ref, 'v0101')
+    if: startsWith(github.ref, 'refs/tags')
 
     runs-on: ubuntu-latest
 
@@ -45,6 +45,7 @@ jobs:
       - name: create wheel distribution
         run: |
           python setup.py bdist_wheel
+          echo $GITHUB_REF
 
 #      - name: publish package to pypi
 #        uses: pypa/gh-action-pypi-publish@master
