--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -11,7 +11,7 @@ jobs:
 
   publish_on_pypi:
 
-    if: startsWith(github.ref, 'refs/tags')
+#    if: startsWith(github.ref, 'refs/tags')
 
     runs-on: ubuntu-latest
 
