--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -4,7 +4,9 @@ name: pypi publishing
 on:
   push:
     branches:
-      - test_pypi_trigger
+      - master
+#    tags:
+#      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 
 jobs:
