--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -5,15 +5,15 @@ on:
   push:
     branches:
       - master
-#    tags:
-#      - 'v[0-9]+.[0-9]+.[0-9]+'
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 
 jobs:
 
   publish_on_pypi:
 
-#    if: startsWith(github.ref, 'refs/tags')
+    if: startsWith(github.ref, 'refs/tags')
 
     runs-on: ubuntu-latest
 
