--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,8 +12,8 @@ build:
 python:
   version: 3.7
   install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - dev
+#    - method: pip
+#      path: .
+#      extra_requirements:
+#        - dev
   system_packages: true
