--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,13 +7,13 @@ sphinx:
   configuration: docs/conf.py
 
 build:
-    image: stable
+    image: latest
 
 python:
   version: 3.7
-#  install:
-#    - method: pip
-#      path: .
-#      extra_requirements:
-#        - dev
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - dev
   system_packages: true
