--- a/.env.example
+++ b/.env.example
@@ -76,8 +76,8 @@ BBS_MINING_MYSQL_PASSWORD=guest
 #------------------------------------------------------------------------------
 # Container - mining cache creation
 #------------------------------------------------------------------------------
+BBS_MINING_CACHE_LOG_LEVEL=20
 BBS_MINING_CACHE_TARGET_TABLE=mining_cache_temporary
 BBS_MINING_CACHE_PROCESSORS_PER_MODEL=1
 BBS_MINING_CACHE_LOG_FILE=mining_cache_creation.log
-BBS_MINING_VERBOSE=-vv
 BBS_SSH_USERNAME=my_username
