--- a/tox.ini
+++ b/tox.ini
@@ -126,6 +126,9 @@ addopts =
     --durations=20
     --verbosity=1
     --last-failed-no-failures=all
+    -m "not slow"
+markers =
+    slow: mark denoting a test that is too slow / requires too many resources
 
 [coverage:run]
 source = bluesearch
