[BBS-256] Harmonize logging levels (#263)
Co-authored-by: Pierre-Alexandre Fonta <pierre-alexandre.fonta@epfl.ch>

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program. If not, see <https://www.gnu.org/licenses/>.
 
-# Integer values of Python loggin levels are as follows (default is WARNING):
+# Integer values of Python logging levels are as follows (default is INFO):
 # CRITICAL = 50
 # ERROR = 40
 # WARNING = 30
@@ -76,8 +76,8 @@ BBS_MINING_MYSQL_PASSWORD=guest
 #------------------------------------------------------------------------------
 # Container - mining cache creation
 #------------------------------------------------------------------------------
+BBS_MINING_CACHE_LOG_LEVEL=20
 BBS_MINING_CACHE_TARGET_TABLE=mining_cache_temporary
 BBS_MINING_CACHE_PROCESSORS_PER_MODEL=1
 BBS_MINING_CACHE_LOG_FILE=mining_cache_creation.log
-BBS_MINING_VERBOSE=-vv
 BBS_SSH_USERNAME=my_username
