--- a/tox.ini
+++ b/tox.ini
@@ -29,13 +29,10 @@ envlist =
 
 [testenv]
 download = true
-deps =
-    en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+deps = en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 extras = dev
 allowlist_externals = docker
-commands =
-    python -m nltk.downloader stopwords punkt
-    pytest {posargs:tests}
+commands = pytest {posargs:tests}
 
 [testenv:lint]
 basepython = python3.7
