Start to convert train stages to spacy train

--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -1,8 +1,6 @@
 [paths]
 train = null
 dev = null
-vectors = null
-init_tok2vec = null
 
 [system]
 gpu_allocator = "pytorch"
@@ -10,13 +8,15 @@ seed = 0
 
 [nlp]
 lang = "en"
-pipeline = ["transformer","ner"]
+pipeline = ["transformer", "ner"]
 batch_size = 128
 disabled = []
 before_creation = null
 after_creation = null
 after_pipeline_creation = null
-tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
+
+[nlp.tokenizer]
+@tokenizers = "spacy.Tokenizer.v1"
 
 [components]
 
@@ -37,13 +37,17 @@ nO = null
 [components.ner.model.tok2vec]
 @architectures = "spacy-transformers.TransformerListener.v1"
 grad_factor = 1.0
-pooling = {"@layers":"reduce_mean.v1"}
 upstream = "*"
+
+[components.ner.model.tok2vec.pooling]
+@layers = "reduce_mean.v1"
 
 [components.transformer]
 factory = "transformer"
 max_batch_items = 4096
-set_extra_annotations = {"@annotation_setters":"spacy-transformers.null_annotation_setter.v1"}
+
+[components.transformer.set_extra_annotations]
+@annotation_setters = "spacy-transformers.null_annotation_setter.v1"
 
 [components.transformer.model]
 @architectures = "spacy-transformers.TransformerModel.v1"
@@ -98,7 +102,7 @@ get_length = null
 
 [training.logger]
 @loggers = "spacy.ConsoleLogger.v1"
-progress_bar = false
+progress_bar = true
 
 [training.optimizer]
 @optimizers = "Adam.v1"
@@ -126,7 +130,7 @@ ents_r = 0.0
 
 [initialize]
 vectors = null
-init_tok2vec = ${paths.init_tok2vec}
+init_tok2vec = null
 vocab_data = null
 lookups = null
 before_init = null
