--- a/requirements.txt
+++ b/requirements.txt
@@ -50,10 +50,11 @@ scikit-learn==0.24.1
 scipy==1.6.1
 sentence-transformers==0.4.1.2
 spacy==3.0.5
+spacy_transformers==1.0.1
 spacy-legacy==3.0.1
 scispacy==0.4.0
 sphinx-bluebrain-theme==0.2.4
 torch==1.7.0
 tox==3.22.0
 tqdm==4.57.0
-transformers==4.3.2
+transformers==4.2.2
