Move from prodigy train to spacy train

--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -88,7 +88,8 @@ gpu_allocator = ${system.gpu_allocator}
 dropout = 0.1
 patience = 1600
 max_epochs = 0
-max_steps = 20000
+# TODO To be tuned. Original value: 20000.
+max_steps = 1000
 eval_frequency = 200
 frozen_components = []
 before_to_disk = null
@@ -117,7 +118,7 @@ eps = 0.00000001
 [training.optimizer.learn_rate]
 @schedules = "warmup_linear.v1"
 warmup_steps = 250
-total_steps = 20000
+total_steps = ${training.max_steps}
 initial_rate = 0.00005
 
 [training.score_weights]
