--- a/requirements.txt
+++ b/requirements.txt
@@ -50,8 +50,9 @@ scikit-learn==0.24.1
 scipy==1.6.1
 sentence-transformers==0.4.1.2
 spacy==3.0.5
-spacy_transformers==1.0.1
 spacy-legacy==3.0.1
+spacy-transformers==1.0.1
+cupy-cuda102==8.5.0
 scispacy==0.4.0
 sphinx-bluebrain-theme==0.2.4
 torch==1.7.0
