Migrate add_er.py to spaCy 3

--- a/data_and_models/pipelines/ner/config.cfg
+++ b/data_and_models/pipelines/ner/config.cfg
@@ -117,6 +117,7 @@ eps = 0.00000001
 
 [training.optimizer.learn_rate]
 @schedules = "warmup_linear.v1"
+# TODO To be tuned since the change of training.max_steps (original: 20000).
 warmup_steps = 250
 total_steps = ${training.max_steps}
 initial_rate = 0.00005
